<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="filterSettings"
            type="me.alfredobejarano.brastlewarkarchitecturecomponents.model.FilterSettings" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:drawableStart="@drawable/ic_search_white_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/search_hint" />
                </com.google.android.material.textfield.TextInputLayout>
            </Toolbar>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                    android:id="@+id/ageRangeView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ageLabel"
                    app:setRange="@{filterSettings.ageRange}" />

                <TextView
                    android:id="@+id/weightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/weight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ageRangeView" />

                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                    android:id="@+id/weightRangeView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weightLabel"
                    app:setRange="@{filterSettings.weightRange}" />

                <TextView
                    android:id="@+id/heightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weightRangeView" />

                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                    android:id="@+id/heightRangeView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/heightLabel"
                    app:setRange="@{filterSettings.heightRange}" />

                <TextView
                    android:id="@+id/friendsRangeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/friends"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heightRangeView" />

                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                    android:id="@+id/friendsRangeView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/friendsRangeLabel"
                    app:setRange="@{filterSettings.friendsRange}" />

                <TextView
                    android:id="@+id/hairColorsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/hair_colors"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friendsRangeView" />

                <LinearLayout
                    android:id="@+id/hairColorsList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hairColorsLabel" />

                <TextView
                    android:id="@+id/professionsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/professions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hairColorsList" />

                <LinearLayout
                    android:id="@+id/professionsList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/professionsLabel" />

                <Button
                    android:id="@+id/applyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="?android:attr/colorPrimary"
                    android:text="@string/apply_filters"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/professionsList" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>